# icm42688-portable

./: .gitignore  Cargo.toml  README.md  memory.x  rust-toolchain.toml
.cargo/: config.toml
examples/: spi_from_usb.rs  spi_slave.rs  spi_test.rs  usb_test.rs
python_scripts/: README.md  pyproject.toml  spi_from_usb.py  usb_test.py
src/: async_version.rs  icm42688.rs  lib.rs  register.rs  register_map.rs  type_number.rs
src/register/: constrainer.rs  register_map.rs  spi_constraints.rs
usb_read_py/: main.py  pyproject.toml
