[package]
authors = ["Stew-000-1-0-011 <stew00010011@gmail.com>"]
edition = "2024"
readme = "README.md"
name = "icm42688-portable"
version = "0.1.0"

[features]
default = ["async"]
async = ["dep:embedded-hal-async"]

[dependencies]
embedded-hal-async = {version = "1", optional = true}
embedded-hal = {version = "1", optional = true}
embedded-hal-bus = "0.3"

[dev-dependencies.embedded-halv02]
package = "embedded-hal"
version = "0.2.7"

[dev-dependencies]
cortex-m = {version = "0.7", features = ["critical-section-single-core"]}
cortex-m-rt = "0.7"
cortex-m-semihosting = "0.5"
panic-halt = "1"
fugit = "0.3"
usb-device = "0.2"
usbd-serial = "0.1"
static_cell = "2"

[dev-dependencies.stm32f1xx-hal]
version = "0.10"
features = ["stm32f103", "medium"]

[profile.dev]
codegen-units = 1
debug = true
lto = true
opt-level = "s" # optimize for size

[profile.release]
codegen-units = 1
debug = true
lto = true
opt-level = "s" # optimize for size
